fix hero image horizontal overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 body {
     font-family: 'Kalam', cursive;
     text-align: center;
+    background-color: #e4ddce;
 }
